# StarFox

./: CMakeLists.txt  README.md  main.cpp
include/: abst_object.hpp  arwing.hpp  arwing_beam.hpp  arwing_bomb.hpp  attack_carrier.hpp  attack_carrier_bomb.hpp  color_tracking.hpp  container.hpp  enemy_random.hpp  enemy_updown.hpp  enemy_updown_bomb.hpp  gl.hpp  params.hpp  shared_data.hpp  starfox.hpp  state.hpp  util.hpp
python/: main.py
script/: run.sh
src/: abst_object.cpp  arwing.cpp  arwing_beam.cpp  arwing_bomb.cpp  attack_carrier.cpp  attack_carrier_bomb.cpp  color_tracking.cpp  container.cpp  enemy_random.cpp  enemy_updown.cpp  enemy_updown_bomb.cpp  gl.cpp  params.cpp  shared_data.cpp  starfox.cpp  util.cpp
